# remoteled

./: .drone.yml  .gitignore
arduino/: fastled300.ino
front/: index.html  styles.css
luasand/: CMakeLists.txt  Dockerfile  code.lua  index.html  init.lua  luasand.service  main.cpp  perlin.cpp  perlin.h  test.lua
luasand/examples/: 000_fireplace_flicker.lua  000_segmented.lua  000_single_color.lua  010_random_flashing.lua  020_complex_random_flashing.lua  020_dim_random_flashing.lua  030_turn_off.lua  040_running_colors.lua  050_epilepsy.lua  050_running_gaps.lua  060_hypnoforog.lua  070_running_colors_2_octaves.lua  070_running_colors_perlin.lua  080_running_colors_and_gaps.lua  080_smooth_transition.lua  090_sonar_scope.lua  100_radar_scope.lua  sketches
luasand/front/: index.html
mled/: check_alsa_devices.py  mled.py  requirements.txt  setup_alsa_loopback.sh  shairport
server/: main.py
